--- a/ver.0.1/manifest.json
+++ b/ver.0.1/manifest.json
@@ -6,7 +6,7 @@
   "background_color": "#e6f6ff",
   "description": "ホームを変えろ。自分も変わる。",
   "icons": [{
-    "src": "logo.PNG",
+    "src": "icon.PNG",
     "sizes": "192x192",
     "type": "image/png"
   }]
