--- a/ver.0.1/manifest.json
+++ b/ver.0.1/manifest.json
@@ -6,7 +6,7 @@
   "background_color": "#e6f6ff",
   "description": "ホームを変えろ。自分も変わる。",
   "icons": [{
-    "src": "./icon.PNG?v=11",
+    "src": "icon.PNG?v=11",
     "sizes": "192x192",
     "type": "image/png"
   }]
