--- a/ojapptest/manifest.json
+++ b/ojapptest/manifest.json
@@ -1,9 +1,7 @@
 {
-  "name": "google",
-  "short_name": "google",
-  "start_url": "./",
-  "display": "standalone",
-  "icons":[
-    {"src":"./icon.PNG","sizes":"192x192","type":"image/png"}
-  ]
+ "name":"おじゃちTwitch",
+ "short_name":"おじゃちTwitch",
+ "start_url":"./",
+ "display":"standalone",
+ "icons":[{"src":"./IMG_3462.png","sizes":"192x192","type":"image/png"}]
 }
